--- a/package.json
+++ b/package.json
@@ -9,22 +9,24 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "react": "^18",
-    "react-dom": "^18",
-    "next": "14.0.4",
     "@sanity/client": "^6.11.1",
     "@sanity/image-url": "^1.0.2",
     "@stripe/stripe-js": "^2.3.0",
     "canvas-confetti": "^1.9.2",
+    "groq": "^3.24.1",
+    "next": "14.0.4",
+    "next-sanity": "^7.0.10",
     "next-sanity-image": "^6.1.1",
+    "react": "^18",
+    "react-dom": "^18",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.0.1"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
-    "postcss": "^8",
-    "tailwindcss": "^3.3.0",
     "eslint": "^8",
-    "eslint-config-next": "14.0.4"    
+    "eslint-config-next": "14.0.4",
+    "postcss": "^8",
+    "tailwindcss": "^3.3.0"
   }
 }
